- Added CatDecorator and js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matecat-microsoft-plugin",
+  "name": "matecat-airbnb-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "Gruntfile.js",
