--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "MateCat Team",
   "license": "LGPL",
   "dependencies": {
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.2.0",
     "grunt": "~1.0.3",
@@ -22,5 +22,11 @@
     "grunt-text-replace": "^0.4.0",
     "keymirror": "^0.1.1",
     "node-sass": "^4.6.1"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "react"
+    ]
   }
 }
