--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.2.0",
-    "grunt": "~1.0.3",
-    "grunt-browserify": "^4.0.1",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-watch": "~0.6.1",
+    "grunt": "~1.0.4",
+    "grunt-browserify": "^5.3.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^2.0.0",
-    "grunt-string-replace": "~0.2.7",
+    "grunt-string-replace": "~1.3.1",
     "grunt-strip": "^0.2.1",
     "grunt-text-replace": "^0.4.0",
     "keymirror": "^0.1.1",
@@ -28,5 +29,8 @@
       "env",
       "react"
     ]
+  },
+  "devDependencies": {
+    "grunt-cli": "^1.3.2"
   }
 }
